tests/fixtures/invalid/hex_no_args.py
# hex() requires at least 1 argument
x = hex()
